# Sentinel-Ensemble-Qwen

./: .dockerignore  .env.example  .env.qwen.example  .gitattributes  .gitignore  ARCHITECTURE.md  ARCH_VERTICAL.html  DEPLOY-ALIBABA.md  Dockerfile  ENVIRONMENT.md  EXTENDING.md  JUDGE-QUICKSTART.md  LICENSE  ONBOARDING.md  PIPELINE_BIGPICTURE.html  QWEN-SUBMISSION.md  README.md  SELF-CORRECTION-PROOF.md  SIFT-SENTINEL-SETUP-GUIDE.md  console.py  demo_self_correction.py  findevil.py  findevil.sh  fresh-start.sh  generate_report.py  get.ps1  get.sh  pyproject.toml  requirements.txt  run_pipeline.py  setup.cmd  setup.ps1  setup.sh  start.sh  step0_onboard.py  stop.sh  test_advanced_scenarios.py  verify_tools.py
audit/: nocheat.py
docs/: ACCURACY.md  BLOG.md  DATASET.md  DOCKER.md  INVOCATIONS.md  STRUCTURE.md  TOOLS.md  VALIDATOR.md  example-report-dc01-heavy.html
scripts/: acceptance_session.sh  build_entity_truth_package.sh  build_vol_help_cache.py  check_active_state_resolver_gate.py  check_customer_table_bucket_section_gate.py  check_customer_table_truth_gate.py  check_customer_table_zero_hit_tools_gate.py  check_final_finding_provenance_sanitizer_gate.py  check_first10_zero_semantics_gate.py  check_fresh_run_completion_gate.py  check_mft_window_fallback_gate.py  check_output_truth_gates.py  check_output_truth_noop_gate.py  check_path_fidelity_gate.py  check_provenance_taxonomy_gate.py  check_react_os_compat_gate.py  check_ssdt_health_gate.py  check_tool_hit_integrity_gate.py  check_validation_family_wiring_gate.py  check_volatility_arg_contract_gate.py  check_zero_inference_contract_gate.py  console.py  find_state_log_pair.py  fresh-start.sh  haiku2_acceptance.sh  live_acceptance.sh  qwen_smoke.py  (+5 more)
(+788 files in other folders)
