[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sift-sentinel"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "mcp>=1.0",
    "defusedxml>=0.7",   # hardened XML parsing of untrusted evidence
    "pycryptodome>=3.20",  # crypto helpers used by the coordinator
    "rich>=13.0",          # live console + onboarding UI
    "psutil>=5.9",         # runtime/health telemetry
    "python-evtx>=0.7",    # Windows event-log parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Optional: the Anthropic fallback provider. The default Qwen/DashScope path is
# stdlib-only and needs none of this -- install with `pip install .[anthropic]`
# only if you run SIFT_LLM_PROVIDER=anthropic.
anthropic = [
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: tests that run against real evidence on this VM",
]
